@@ -129,5 +129,5 @@ This module is released under the same terms as Perl itself.
 =cut
 
 package WWW::Mechanize::Chrome::Cookbook;
-our $VERSION = '0.27';
+our $VERSION = '0.28';
 1;
